<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <POU Name="ERROR" Id="{8d68ba2e-431f-4b62-8370-2a49d23c7211}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM ERROR
VAR
	StopX_a : MC_Stop;
	StopX_b : MC_Stop;
	StopY 	: MC_Stop;
	StopZ 	: MC_Stop;
	
	FB_AXISERRORXa, FB_AXISERRORXb, FB_AXISERRORY, FB_AXISERRORZ : MC_ReadAxisError;
	
	ErrorIDXa 	: DWORD;
	ErrorIDXb 	: DWORD;
	ErrorIDY 	: DWORD;
	ErrorIDZ 	: DWORD;
	
	ErrorAxisXa	: UDINT;
	ErrorAxisXb	: UDINT;
	ErrorAxisY	: UDINT;
	ErrorAxisZ	: UDINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//stop all
StopX_a(Axis := gvl.As_Xa,
		Execute := GVL.StopALL);

StopX_b(Axis := gvl.As_Xb,
		Execute := GVL.StopALL);

StopY(Axis := gvl.As_Y,
		Execute := GVL.StopALL);
		
StopZ(Axis := gvl.As_Z,
		Execute := GVL.StopALL);

//error		
FB_AxisErrorXa(Axis := gvl.As_Xa, Enable := TRUE);
FB_AxisErrorXb(Axis := gvl.As_Xb, Enable := TRUE);
FB_AxisErrorY (Axis := gvl.As_Y,  Enable := TRUE);
FB_AxisErrorZ (Axis := gvl.As_Z,  Enable := TRUE);

ErrorIDXa 	:= FB_AxisErrorXa.ErrorID;
ErrorIDXb 	:= FB_AxisErrorXb.ErrorID;
ErrorIDY 	:= FB_AxisErrorY.ErrorID;
ErrorIDZ 	:= FB_AxisErrorZ.ErrorID;

ErrorAxisXa	:= FB_AxisErrorXa.AxisErrorID;
ErrorAxisXb	:= FB_AxisErrorXb.AxisErrorID;
ErrorAxisY	:= FB_AxisErrorY.AxisErrorID;
ErrorAxisZ	:= FB_AxisErrorZ.AxisErrorID;

com.IFerror := FB_axiserrorxa.Error OR FB_axiserrorxb.Error OR FB_axiserrory.Error OR FB_axiserrorz.Error;]]></ST>
    </Implementation>
    <LineIds Name="ERROR">
      <LineId Id="15" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="25" Count="1" />
      <LineId Id="24" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="27" Count="0" />
      <LineId Id="31" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="32" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="46" Count="3" />
      <LineId Id="58" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="59" Count="2" />
      <LineId Id="66" Count="0" />
      <LineId Id="62" Count="3" />
      <LineId Id="87" Count="0" />
      <LineId Id="86" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>